--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "shadertoy-with-threejs",
+  "name": "shadertoy-to-threejs",
   "version": "1.0.0",
   "type": "module",
   "scripts": {
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/afilahkle/shadertoy-with-threejs.git"
+    "url": "git+https://github.com/afilahkle/shadertoy-to-threejs.git"
   },
   "keywords": [
     "three.js",
@@ -21,9 +21,9 @@
   "author": "Mostafa Mahmoud & Omar Khalifa",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/afilahkle/shadertoy-with-threejs/issues"
+    "url": "https://github.com/afilahkle/shadertoy-to-threejs/issues"
   },
-  "homepage": "https://github.com/afilahkle/shadertoy-with-threejs#readme",
+  "homepage": "https://github.com/afilahkle/shadertoy-to-threejs#readme",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
